force-app/main/default/objects/Lease_Financial_Report_Mapping__c/Lease_Financial_Report_Mapping__c.object-meta.xml
<CustomObject>
    <label>Lease Financial Report Mapping</label>
    <nameField>
        <displayFormat>FRM-{0000}</displayFormat>
        <label>Lease Financial Report Mapping Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lease Financial Report Mapping</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>