force-app/main/default/objects/Lease_Financial_Report_Mapping__c/fields/Child_Parent_Contract_API__c.field-meta.xml
<CustomField>
    <fullName>Child_Parent_Contract_API__c</fullName>
    <label>Child Parent(Contract) API</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>cllease__Contract__c</fullName>
            </value>
            <value>
                <fullName>cllease__Lease_Account__c</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>