force-app/main/default/objects/Lease_Financial_Report_Mapping__c/fields/Child_Relation__c.field-meta.xml
<CustomField>
    <fullName>Child_Relation__c</fullName>
    <label>Child Relation API</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>cllease__Charge__c</fullName>
            </value>
            <value>
                <fullName>cllease__Residual_Stream__c</fullName>
            </value>
            <value>
                <fullName>cllease__Rental_Stream__c</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>