force-app/main/default/objects/Lease_Financial_Report_Mapping__c/fields/Count_All_Child_Records__c.field-meta.xml
<CustomField>
    <fullName>Count_All_Child_Records__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Count All Child Records</label>
    <type>Checkbox</type>
</CustomField>