force-app/main/default/objects/Lease_Financial_Report_Mapping__c/fields/Current_Period__c.field-meta.xml
<CustomField>
    <fullName>Current_Period__c</fullName>
    <label>Current Period(Month) From Which Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>