force-app/main/default/objects/Lease_Financial_Report_Mapping__c/fields/Current_Year__c.field-meta.xml
<CustomField>
    <fullName>Current_Year__c</fullName>
    <label>Current Year From Which Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>