force-app/main/default/objects/Lease_Financial_Report_Mapping__c/fields/is_Ending_Balance__c.field-meta.xml
<CustomField>
    <fullName>is_Ending_Balance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>is Ending Balance</label>
    <type>Checkbox</type>
</CustomField>