force-app/main/default/objects/Lease_Financial_Report_Mapping__c/fields/Source_Child_Relation__c.field-meta.xml
<CustomField>
    <fullName>Source_Child_Relation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Source Child Relation</label>
    <type>Checkbox</type>
</CustomField>