force-app/main/default/objects/Lease_Financial_Report_Mapping__c/fields/Source_Object_Name__c.field-meta.xml
<CustomField>
    <fullName>Source_Object_Name__c</fullName>
    <label>Source Object Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>