force-app/main/default/objects/Lease_Financial_Report_Mapping__c/fields/Sum_All_Child_Records__c.field-meta.xml
<CustomField>
    <fullName>Sum_All_Child_Records__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sum All Child Records</label>
    <type>Checkbox</type>
</CustomField>