force-app/main/default/objects/Lease_Financial_Report_Mapping__c/listViews/Parent_Mapping_Fields.listView-meta.xml
<ListView>
    <fullName>Parent_Mapping_Fields</fullName>
    <columns>NAME</columns>
    <columns>Source_Object_Name__c</columns>
    <columns>Source_Field_Name__c</columns>
    <columns>Target_Object_Name__c</columns>
    <columns>Target_Field_Name__c</columns>
    <columns>Where_Condition__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Source_Child_Relation__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Parent Mapping Fields</label>
    <language>en_US</language>
</ListView>